fixed spacing between section headers

--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@ hr {
 .section-header {
 	text-align: center;
 	padding-top: 20px;
+	margin-top: 15px;
 }
 
 .sectionName {
